--- a/2022/ComputerPractice/cp_06.md
+++ b/2022/ComputerPractice/cp_06.md
@@ -8,12 +8,23 @@
 
 1. [コンピュータ演習 6.チラシの作成](#コンピュータ演習-6チラシの作成)
    1. [目次](#目次)
-   2. [スライド](#スライド)
-   3. [動画](#動画)
-   4. [リンク](#リンク)
+   2. [ダークモードについて](#ダークモードについて)
+   3. [スライド](#スライド)
+   4. [動画](#動画)
+   5. [リンク](#リンク)
 
 
 ---
+
+## ダークモードについて
+ダークモードにすると、背景色と文字色が反転します。
+文字を入力するだけなら問題ないですが、図を貼り付けたり、色をつけたりすると混乱します。
+そんな時は、
+1. Word - 環境設定
+2. 全般 - 個人用設定
+3. 「ダークモードをオフにする」「ダークモードのページの色は白くなります。」を選択
+
+うまく切り替わらない時には、Wordを一度終了して起動し直してください。
 
 ## スライド
 
