--- a/2022/SoundDesign/sd_07.md
+++ b/2022/SoundDesign/sd_07.md
@@ -5,9 +5,7 @@
 ---
 
 1. [スライド](#スライド)
-2. [データ](#データ)
-3. [動画](#動画)
-4. [参考リンク](#参考リンク)
+2. [参考リンク](#参考リンク)
 
 ---
 
@@ -17,14 +15,8 @@
 
 [スライド資料](./sd_07slide.pdf){:target="_blank"}
 
-## データ
-- [ノイズとリバーブの低減](https://helpx.adobe.com/jp/premiere-pro/how-to/reduce-noise-and-reverberation.html){:target="_blank"}
-
-## 動画
-- [コンプレッサー](https://www.youtube.com/watch?v=jbd4gx3-O04){:target="_blank"}
-- [パラメトリックイコライザー](https://www.youtube.com/watch?v=bsUY1D3lD0k){:target="_blank"}
-- [歪み系・モジュレーション系](https://www.youtube.com/watch?v=Le4OPbBBvXk){:target="_blank"}
 
 ## 参考リンク
-- [Soundly](https://getsoundly.com/){:target="_blank"}
-
+- [eMastered](https://emastered.com/ja)
+- [動画の音声マスタリング](https://saidera.co.jp/video_mastering.html)
+- [LOUDNESS PENALTY: ANALYZER](https://www.loudnesspenalty.com/)
