--- a/2022/MediaRepresentationIII/mr3_08.md
+++ b/2022/MediaRepresentationIII/mr3_08.md
@@ -19,4 +19,5 @@
 
 
 ## 動画
-- [AEでグラフエディター](https://www.youtube.com/watch?v=8J-pdPuWUDM){:target="_blank"}
+- [Premiere Pro ネスト](https://www.youtube.com/watch?v=EKCsuD9cSSk){:target="_blank"}
+- [AfterEffects トラックマット 親子づけ](https://www.youtube.com/watch?v=FHWOv84XuWg){:target="_blank"}
