--- a/2022/InformationDesignI/id_08.md
+++ b/2022/InformationDesignI/id_08.md
@@ -9,10 +9,14 @@
 1. [情報デザイン演習I 8.Webレイアウト応用](#情報デザイン演習i-8webレイアウト応用)
    1. [目次](#目次)
    2. [スライド](#スライド)
+   3. [配布資料](#配布資料)
 
 ---
 
 ## スライド
 
 [スライド資料](./id_08slide.pdf){:target="_blank"}
+
+## 配布資料
+[配布資料](./tex/float-flexbox-cssgrid.pdf)
 
