--- a/2022/InformationDesignI/id_08.md
+++ b/2022/InformationDesignI/id_08.md
@@ -10,6 +10,7 @@
    1. [目次](#目次)
    2. [スライド](#スライド)
    3. [配布資料](#配布資料)
+   4. [チートシート](#チートシート)
 
 ---
 
@@ -18,5 +19,8 @@
 [スライド資料](./id_08slide.pdf){:target="_blank"}
 
 ## 配布資料
-[配布資料](./tex/float-flexbox-cssgrid.pdf)
+[配布資料](./tex/float-flexbox-cssgrid.pdf){:target="_blank"}
 
+## チートシート
+- [Flexboxチートシート](https://www.webcreatorbox.com/tech/css-flexbox-cheat-sheet#flexbox14){:target="_blank"}
+- [CSS Grid Layoutチートシート](https://qiita.com/7dt/items/577ba8eada3380c93dbb){:target="_blank"}
