--- a/2022/InformationDesignI/tex/float-flexbox-cssgrid.tex
+++ b/2022/InformationDesignI/tex/float-flexbox-cssgrid.tex
@@ -260,7 +260,7 @@ item4のdivを削除して見てみても勝手にいい感じにレイアウト
 \subsection{要素の幅を統一してみよう}
 .flex-itemに以下を追加
 \begin{lstlisting}
-            width: 15\%;
+            width: 15%;
 \end{lstlisting}
 右に空きがあるけど、綺麗に並ぶね。高さも揃ってるね。
 
