--- a/2022/MediaRepresentationIII/mr3_09.md
+++ b/2022/MediaRepresentationIII/mr3_09.md
@@ -10,6 +10,7 @@
    1. [目次](#目次)
    2. [スライド](#スライド)
    3. [データ](#データ)
+   4. [授業後補足](#授業後補足)
 
 ---
 
@@ -19,4 +20,8 @@
 
 ## データ
 - [Illustrator Icon](data/Adobe_Illustrator_CC_icon.ai.zip)
+
+## 授業後補足
+授業中に見せたAEは以下のように設定されています。
+![](img/mr3_09shapelayer_work01.png)
 
