--- a/2022/InformationDesignI/tex/float-flexbox-cssgrid.tex
+++ b/2022/InformationDesignI/tex/float-flexbox-cssgrid.tex
@@ -95,9 +95,9 @@ floatに入る前にlorem ipsumについて説明します。
 
 出版、ウェブデザイン、グラフィックデザインなどの諸分野において使用されている典型的なダミーテキストのことをlorem ipsum(ローレムイプサム)と言います。ダミーテキストのため、意味は全くありません。(一応、もとは古代ローマの政治家・哲学者キケロの『De finibus bonorum et malorum』（善と悪の究極について）という著作から取られている。)
 
-vscodeでは、ipsum10, ipsum20, ipsum30等と入力してリターンを押すことによって、その単語数分の文字を自動で入力してくれます。
+vscodeでは、lorem10, lorem20, lorem30等と入力してリターンを押すことによって、その単語数分の文字を自動で入力してくれます。
 
-以下の例では、ipsum10, ipsum20, ipsum30, ipsum50を利用しています。
+以下の例では、lorem10, lorem20, lorem30, lorem50を利用しています。
 
 
 
