--- a/2022/InformationDesignI/id_09.md
+++ b/2022/InformationDesignI/id_09.md
@@ -9,7 +9,9 @@
 1. [情報デザイン演習I 9.プロトタイプの作成](#情報デザイン演習i-9プロトタイプの作成)
    1. [目次](#目次)
    2. [スライド](#スライド)
-   3. [チートシート](#チートシート)
+   3. [今回利用する前回作業ファイル](#今回利用する前回作業ファイル)
+   4. [配布資料](#配布資料)
+   5. [チートシート](#チートシート)
 
 ---
 
@@ -17,6 +19,11 @@
 
 [スライド資料](./id_09slide.pdf){:target="_blank"}
 
+## 今回利用する前回作業ファイル
+- [test_cssgrid_3column-B.html](asset/test_cssgrid_3column-B.html)
+
+## 配布資料
+- [デザインをコーディングしてHPにしてみよう。](tex/Lets-Coding.pdf){:target="_blank"}
 
 ## チートシート
 - [Flexboxチートシート](https://www.webcreatorbox.com/tech/css-flexbox-cheat-sheet#flexbox14){:target="_blank"}
