--- a/2022/InformationDesignI/id_09.md
+++ b/2022/InformationDesignI/id_09.md
@@ -22,6 +22,8 @@
 ## 今回利用する前回作業ファイル
 - [test_cssgrid_3column-B.html](asset/test_cssgrid_3column-B.html)
 
+リンク先を右クリックで「リンク先を別名で保存...」から保存してください。
+
 ## 配布資料
 - [デザインをコーディングしてHPにしてみよう。](tex/Lets-Coding.pdf){:target="_blank"}
 
