--- a/2022/MediaRepresentationV/mr5_10.md
+++ b/2022/MediaRepresentationV/mr5_10.md
@@ -5,21 +5,27 @@
 ---
 ## 目次
 
-- [メディア表現V 10. グリースペンシル](#メディア表現v-10-グリースペンシル)
-  - [目次](#目次)
-  - [グリースペンシルとは?](#グリースペンシルとは)
-    - [想定される利用方法](#想定される利用方法)
-  - [始め方](#始め方)
-  - [やってみようPart1](#やってみようpart1)
-  - [2Dアニメーション](#2dアニメーション)
-    - [オブジェクトアニメ](#オブジェクトアニメ)
-    - [普通のアニメ(セル画)](#普通のアニメセル画)
-    - [棒人間？](#棒人間)
-  - [自動補完やってみよう](#自動補完やってみよう)
-  - [参考](#参考)
+1. [メディア表現V 10. グリースペンシル](#メディア表現v-10-グリースペンシル)
+   1. [目次](#目次)
+   2. [グリースペンシルとは?](#グリースペンシルとは)
+   3. [GreasePencirl使い方](#greasepencirl使い方)
+   4. [おすすめ設定](#おすすめ設定)
+   5. [特徴](#特徴)
+   6. [GreasePencilのアニメの方法](#greasepencilのアニメの方法)
+   7. [オブジェクトアニメ](#オブジェクトアニメ)
+   8. [やってみようPart2](#やってみようpart2)
+   9. [自動中割機能について](#自動中割機能について)
+   10. [やってみようPart3](#やってみようpart3)
+   11. [参考動画](#参考動画)
+   12. [その他参考](#その他参考)
 
 ---
-作成中...グリースペンシルまだ全然理解してないや...
+<!-- 作成中...グリースペンシルまだ全然理解してないや... -->
+Blender3.2出ましたね。検証していないので3.1で行きます。
+
+GreasePencil部分だけで、実は一つのIllustratorみたいな感じになっているので、ソフトの操作法や考え方を理解する必要があリます。
+
+ただ、これまでと独自な考え方をとっていますが、あー、こういう方法もあるのか、と思わされます。
 
 ## グリースペンシルとは?
 - ペイントソフトの様なペン機能を使い、2Dモデル、または3Dモデルを作成出来る機能
@@ -34,6 +40,8 @@
 - 背景作画への利用
 - 3次元のガイドとして
 
+Blenderは3Dソフトとして認識されているが、可能性は無限大
+
 [![](https://img.youtube.com/vi/1G4jwD1-c1k/0.jpg)](https://www.youtube.com/watch?v=1G4jwD1-c1k){:target="_blank"}
 
 [![](https://img.youtube.com/vi/pKmSdY56VtY/0.jpg)](https://www.youtube.com/watch?v=pKmSdY56VtY){:target="_blank"}
@@ -41,37 +49,85 @@
 ---
 ---
 
-## 始め方
-最初にGeneralでなく2D Animationを選ぶかまたは
-- General
+## GreasePencirl使い方
+最初のスプラッシュスクリーンでGeneralでなく2D Animationを選ぶか(普通はこれで十分)
+
+または
+- General Cubeを消す
 - 「-Y」がみえるように(視点は動かないほうが良い)
 - Shift+AでGreasePencil - Blank (このオブジェクトに描いてくイメージ)
 - Draw Modeに変更
 - 背景色はViewportShading->Matcap->Viewportで色を変更
+- GridはViewport Overlayのチェックで消せる
+
+---
+
+## おすすめ設定
+絵を描きたいなら
+- 基本はDrawツールを使う
 - nでサイドパネルを開いてTool
-- ブラシや色を変更して描くことができる
-- Photoshop的ではなく、Illustrator的に線は管理されている
-- 色はマテリアルで管理されていることに注意
-- レイヤーあるよ(プロパティのとこ二つに分けたほうが使いやすいかも)
-- フィルはIllustratorとちょい考え方が異なる。
--  Line, Fillレイヤーに分ける方法、一つのマテリアルで指定する方法使い分けが必要かな
--  消しゴムも、頂点を消す方法と、普通の消しゴムがあったりする
-  
+- プロパティパネルでマテリアルを選択
+- 必要に応じてプロパティパネルを分割してレイヤーを表示
+
+---
+
+## 特徴
+Photoshopと同様に考えると理解できない。
+Illsutratorに近いが、Blenderならではの独自の考え方もあるため、考え方を変える必要がある
+
+
+### 線について
+- Drawツールで線を書いても、それは頂点の集まりで構成され、パスのような感じで線が描かれている
+- そのためEditモードに変更すると構成する点の変更が可能
+- 点を押し出すと線に厚みをつけられたりする
+
+### 色について
+- Drawで書くときに強さがあるので、1にしないと薄くなってしまう
+- 色はマテリアルで管理されているので、同じマテリアルに設定した線は後で一括で色変更が可能
+- マテリアルには線・塗りがある(Illustratorに近い)
+
+### レイヤーについて
+- レイヤーもあるよOutlinerで確認ができるが、プロパティパネルのグリースペンシルの方が使い勝手がいいかも
+- お絵描きソフトとして利用するならレイヤーを分けて「下書き」「塗り」と分けるのもいかも(デフォルトでLine,Fillレイヤーが用意されている)
+
+### Fillツールについて
+- 線を塗りつぶすという考え方のはずだが、これも少し癖があり普通に線を書いた後にFillツールを使っても塗れない
+- マテリアルでフィルが有効になっていないと濡れない
+- そのため、線を描くマテリアル、塗りのためのマテリアルを分けて使うのが良いかも
+- 具体的にはLineレイヤーで線のマテリアルで描画、Fillレイヤーに移って、塗りのマテリアルでFillで埋める(別のオブジェクトとして管理される->アニメーションするときはトラブル)
+- アニメーションするなら、線・塗りが両方あるマテリアルが良いだろう
+
+
+### 消しゴム
+- 消しゴムにも種類がある。フィルは消せない
+- 見た目的にはPhotoshopのように消す方法(頂点の重みを軽減してる？)
+- 頂点を消す方法
+- 線ごと消す方法
+
+### その他
 - 形状(線・円など)も癖ある。
+- 確定させるのにエンター必要
 - 書いた後、超点数をコントロールできる (トラックパッドだと失敗。マウスホイール必要か？)
 - 頂点でいじりたい時は、エディットモードへ
 
 ---
 ---
 
-## やってみようPart1
+今回独自に作るより非常によくまとまっている動画があったので、それをもとに基本編で操作方法を学びましょう。
+
+### やってみようPart1
 
 [参考：グリースペンシル解説1/基本編](https://www.youtube.com/watch?v=sMKW--36sN0){:target="_blank"}
 
-## 2Dアニメーション
-[参考：グリースペンシル解説2/アニメ編](https://www.youtube.com/watch?v=jictosxDcCg){:target="_blank}
+---
+---
 
-### オブジェクトアニメ
+## GreasePencilのアニメの方法
+オブジェクトアニメと普通のアニメの2種類あります。
+
+## オブジェクトアニメ
+書いた絵をオブジェクトとして描く方法
+
 - アーマチュア追加
 - Ctrl+Pで親子づけ
 - 自動ウェイトはうまくいかないので、空のグループ
@@ -85,25 +141,33 @@
 - EditModeだと、頂点動かせるし、プロポーショナル編集がつかえるので、まわりをひきづることもできる
 - モディファイアも使えるよ(ビルドとかノイズとか)
 
-参考URLを貼っておいて、全部網羅しなくていいようにしよう
+
+## やってみようPart2
+[参考：グリースペンシル解説2/アニメ編](https://www.youtube.com/watch?v=jictosxDcCg){:target="_blank}
 
 
-### 棒人間？
-- ウェイトペイントが特殊だけど、他一緒
+---
+---
+## 自動中割機能について
+二つのフレームに(例えば0,1秒)に絵があったときに、そのフレームの間を自動で描画してもらう方法があります。
 
-## 自動補完やってみよう
-https://www.youtube.com/watch?v=xp4BcAaqCgQ
+うまく利用すると描画するフレーム数を大幅に大幅に低減することができます。
+
 - 2D Animationで新規
-- 0Frameと60Frameとかに絵を描く(動くの対応して書いたほうがよさげ)
-- Interpolateツールで、前後のフレームで対応したのを順にセレクト
+- 0Frameと60Frameとかに絵を描く(動く点が対応するように書いたほうがよい)
+- Interpolateツールで、前後のフレームで対応した点を順にセレクト
 - 10フレームとかにして、左クリックで右にドラッグで、キーフレーム追加
 - Interpolate Sequenceで勝手に埋めることも可能
 
-https://www.youtube.com/watch?v=Tscvf_uc5LU
+## やってみようPart3
+[参考：Blender Grease Pencilの自動補間ツール（中割りツール）で3Dイラストを動かす](https://www.youtube.com/watch?v=xp4BcAaqCgQ){:target="_blank}
+
+## 参考動画
+[自動中割機能は実用できるのか検証してみた。](https://www.youtube.com/watch?v=Tscvf_uc5LU)
 
 ---
 ---
-## 参考
+## その他参考
 - 2Dアニメーションを3Dシーンに取り込む
 
 [![](https://img.youtube.com/vi/ninu1gRHmyY/0.jpg)](https://www.youtube.com/watch?v=ninu1gRHmyY){:target="_blank"}
