--- a/2022/MediaRepresentationV/mr5_10.md
+++ b/2022/MediaRepresentationV/mr5_10.md
@@ -23,9 +23,13 @@
 <!-- 作成中...グリースペンシルまだ全然理解してないや... -->
 Blender3.2出ましたね。検証していないので3.1で行きます。
 
-GreasePencil部分だけで、実は一つのIllustratorみたいな感じになっているので、ソフトの操作法や考え方を理解する必要があリます。
+GreasePencil部分だけで、実は一つのIllustrator+アルファみたいな機能になっているので、ソフトの操作法や考え方を理解する必要があリます。
 
 ただ、これまでと独自な考え方をとっていますが、あー、こういう方法もあるのか、と思わされます。
+
+また、描画した絵は当然3Dオブジェクトですから、3D空間に配置することもできます。
+
+---
 
 ## グリースペンシルとは?
 - ペイントソフトの様なペン機能を使い、2Dモデル、または3Dモデルを作成出来る機能
