--- a/2022/MediaRepresentationV/mr5_10.md
+++ b/2022/MediaRepresentationV/mr5_10.md
@@ -8,7 +8,7 @@
 1. [メディア表現V 10. グリースペンシル](#メディア表現v-10-グリースペンシル)
    1. [目次](#目次)
    2. [グリースペンシルとは?](#グリースペンシルとは)
-   3. [GreasePencirl使い方](#greasepencirl使い方)
+   3. [GreasePencil始め方](#greasepencil始め方)
    4. [おすすめ設定](#おすすめ設定)
    5. [特徴](#特徴)
    6. [GreasePencilのアニメの方法](#greasepencilのアニメの方法)
@@ -53,7 +53,7 @@ Blenderは3Dソフトとして認識されているが、可能性は無限大
 ---
 ---
 
-## GreasePencirl使い方
+## GreasePencil始め方
 最初のスプラッシュスクリーンでGeneralでなく2D Animationを選ぶか(普通はこれで十分)
 
 または
