--- a/2022/InformationDesignI/id_10.md
+++ b/2022/InformationDesignI/id_10.md
@@ -25,7 +25,7 @@
 リンク先を右クリックで「リンク先を別名で保存...」から保存してください。
 
 ## 配布資料
-- [デザインをコーディングしてHPにしてみよう。](tex/Lets-CodingPart2.pdf){:target="_blank"}
+- [デザインをコーディングしてHPにしてみよう。Part2](tex/Lets-CodingPart2.pdf){:target="_blank"}
 
 ## チートシート
 - [Flexboxチートシート](https://www.webcreatorbox.com/tech/css-flexbox-cheat-sheet#flexbox14){:target="_blank"}
