--- a/2022/SoundDesign/sd_10.md
+++ b/2022/SoundDesign/sd_10.md
@@ -5,8 +5,9 @@
 ---
 
 1. [スライド](#スライド)
-2. [素材データ](#素材データ)
-3. [参考リンク](#参考リンク)
+2. [データ(授業後追記)](#データ授業後追記)
+3. [素材データ](#素材データ)
+4. [参考リンク](#参考リンク)
 
 ---
 
@@ -15,6 +16,9 @@
 ## スライド
 
 [スライド資料](./sd_10slide.pdf){:target="_blank"}
+
+## データ(授業後追記)
+- [Garage Band データ](data/garageband_data.zip)
 
 ## 素材データ
 - [最終課題用素材データ](https://helpx.adobe.com/jp/audition/how-to/music-editor.html){:target="_blank"}
