--- a/2022/ComputerPractice/cp_12.md
+++ b/2022/ComputerPractice/cp_12.md
@@ -21,12 +21,12 @@
 
 ## 動画
 
-- [cp1 excel06 01](https://www.youtube.com/watch?v=GfassTCMFQc){:target="_blank"}
-- [cp1 excel06 11](https://www.youtube.com/watch?v=84gLVPniOA4){:target="_blank"}
-- [cp1 excel06 12](https://www.youtube.com/watch?v=lmTlj781cVs){:target="_blank"}
-- [cp1 excel06 21](https://www.youtube.com/watch?v=AtwrPozUjP8){:target="_blank"}
-- [cp1 excel06 31](https://www.youtube.com/watch?v=XfCZsq4kbPU){:target="_blank"}
-- [cp1 excel06 32](https://www.youtube.com/watch?v=7y2irfD7w8k){:target="_blank"}
+- [cp1 excel06 01 Excelの基本](https://www.youtube.com/watch?v=GfassTCMFQc){:target="_blank"}
+- [cp1 excel06 11 表を作ろう Part1 文字入力・セルの結合・揃え](https://www.youtube.com/watch?v=84gLVPniOA4){:target="_blank"}
+- [cp1 excel06 12 表を作ろう Part2 書式設定・罫線・幅高さ調整](https://www.youtube.com/watch?v=lmTlj781cVs){:target="_blank"}
+- [cp1 excel06 21 練習9](https://www.youtube.com/watch?v=AtwrPozUjP8){:target="_blank"}
+- [cp1 excel06 31 印刷 体裁を整えてみよう](https://www.youtube.com/watch?v=XfCZsq4kbPU){:target="_blank"}
+- [cp1 excel06 32 練習10](https://www.youtube.com/watch?v=7y2irfD7w8k){:target="_blank"}
 
 ## リンク
 - [e-typing](https://www.e-typing.ne.jp/){:target="_blank"}
