--- a/2022/ComputerPractice/cp_13.md
+++ b/2022/ComputerPractice/cp_13.md
@@ -21,12 +21,12 @@
 
 ## 動画
 
-- [P.132-137 練習12の前まで](https://www.youtube.com/watch?v=Nx3y_UlYO64)
-- [練習12](https://www.youtube.com/watch?v=D6Es7kbyaQw)
-- [P.137 3) - P.138](https://www.youtube.com/watch?v=0SHLcszCsy8)
-- [練習13](https://www.youtube.com/watch?v=IqjK8JL2B2I)
-- [P.139(4) - P.141 練習14前まで](https://www.youtube.com/watch?v=6m_Lpu5fO5k)
-- [練習14](https://www.youtube.com/watch?v=IkNqkIyUBdk)
+- [P.132-137 練習12の前まで](https://www.youtube.com/watch?v=Nx3y_UlYO64){:target="_blank"}
+- [練習12](https://www.youtube.com/watch?v=D6Es7kbyaQw){:target="_blank"}
+- [P.137 3) - P.138](https://www.youtube.com/watch?v=0SHLcszCsy8){:target="_blank"}
+- [練習13](https://www.youtube.com/watch?v=IqjK8JL2B2I){:target="_blank"}
+- [P.139(4) - P.141 練習14前まで](https://www.youtube.com/watch?v=6m_Lpu5fO5k){:target="_blank"}
+- [練習14](https://www.youtube.com/watch?v=IkNqkIyUBdk){:target="_blank"}
 
 ## リンク
 - [e-typing](https://www.e-typing.ne.jp/){:target="_blank"}
