--- a/2022/MediaRepresentationV/mr5_14.md
+++ b/2022/MediaRepresentationV/mr5_14.md
@@ -5,51 +5,147 @@
 ---
 ## 目次
 
-- [メディア表現V 14. コンポジット・動画編集](#メディア表現v-14-コンポジット動画編集)
-  - [目次](#目次)
-  - [レンダリングしただけだと？](#レンダリングしただけだと)
-  - [レイヤーベース ノードベース](#レイヤーベース-ノードベース)
-  - [コンポジット 何ができるか](#コンポジット-何ができるか)
-  - [動画編集 何ができるか](#動画編集-何ができるか)
+1. [メディア表現V 14. コンポジット・動画編集](#メディア表現v-14-コンポジット動画編集)
+   1. [目次](#目次)
+   2. [3Dによるレンダリング](#3dによるレンダリング)
+   3. [リアルさの追求](#リアルさの追求)
+   4. [リアルさって何？](#リアルさって何)
+   5. [コンポジットソフトの他の利用方法](#コンポジットソフトの他の利用方法)
+   6. [コンポジット用のソフト](#コンポジット用のソフト)
+   7. [レイヤーベースとノードベース(一般論)](#レイヤーベースとノードベース一般論)
+   8. [画像ファイルについて](#画像ファイルについて)
+   9. [BlenderでのOpenEXRを利用したコンポジット](#blenderでのopenexrを利用したコンポジット)
+   10. [Blenderのコンポジットでできること](#blenderのコンポジットでできること)
+   11. [動画編集](#動画編集)
+   12. [参考リンク](#参考リンク)
 
 ---
 
+## 3Dによるレンダリング
+当たり前のことを言いますが、
+3Dでは仮想空間上にモデルや照明を配置し、カメラを配置し、シミュレーションしてレンダリングをします。
+今後、シミュレーションの精度が上がっていけばどんどんリアルになっていきますが、シミュレーションしていないことまでは計算できません。
+その結果、3Dっぽさ、リアルでない感じが残ってしまいます。
 
-## レンダリングしただけだと？
-3D空間のものを画像として書き出しただけ。リアルにならない。
-動画と重ね合わせるには、影など様々なデータを組み合わせて自然な形に合成する必要がある。
-カメラの特性に合わせて歪ませたり等も必要。
-モーショントラッキング用に使うマーカーを消す「バレ消し」もコンポジットの作業となる
-AfterEffectを使ってもいいし、Blenderで行ってもOK。(Nuke,Natron)
+## リアルさの追求
+2022/3/21にUnityから「Enemies」という動画がリリースされました。
+みてみましょう。
 
-## レイヤーベース ノードベース
+[Enemies – real-time cinematic teaser | Unity](https://www.youtube.com/watch?v=eXYUNrgqWUU){:target="_blank"}
+
+[『Enemies』のご紹介：Unity が送る、現実に迫るデジタルヒューマンの最新進化形](https://blog.unity.com/ja/news/introducing-enemies-the-latest-evolution-in-high-fidelity-digital-humans-from-unity){:target="_blank"}
+
+本物のようなデジタルヒューマンの作成にまた一歩近づいています。
+2019にも「The Heretic」をUnityデモチームが発表していますが、これを失敗と位置付けるほどの進化を遂げています。
+
+[The Heretic](https://unity.com/ja/the-heretic)
+
+## リアルさって何？
+表現として「リアル」なものが良いとは限りません。「セルルック」のような方向ももちろんあります。
+
+ただ、現状、仮に「リアルさ」を追求するとすれば、3Dによるレンダリングだけでは不十分なことも多くなります。
+
+そのような時に、コンポジット=合成の技術を利用して、よりクオリティの高い表現が可能となります。
+
+## コンポジットソフトの他の利用方法
+もちろん、コンポジットソフトを使って
+- モーショントラッキングの利用
+- バレ消し(いらないところを消す)
+
+などさまざまなことができます
+
+## コンポジット用のソフト
+皆さんは、AdobeのAfterEffectsによって合成について学んできました。が、他にもたくさんあります。
+- [Blackmagic Fusion](https://www.blackmagicdesign.com/jp/products/fusion)
+- [Nuke](https://www.foundry.com/ja/products/nuke-family/nuke)
+- [Houdini](https://www.sidefx.com/ja/products/houdini/)
+- [Natron](https://natrongithub.github.io/)
+
+全て無料版も存在してます。(Natronはオープンソース)
+
+そして、Blenderにもコンポジットの機能が搭載されています。
 
 
-## コンポジット 何ができるか
-CyclesのDenoise
+## レイヤーベースとノードベース(一般論)
+### レイヤーベース
+これまで、Photoshop, Illustrator, Premiere, AfterEffectsとレイヤーという概念を用いてきました。
 
-https://www.youtube.com/watch?v=hprVvGtGqoY
--Intro 0:00
--Denoising 0:15
--Color Grading 2:11
--Lens dispersion 3:24
--Light beams 4:26
--Lens Dirt 5:27
+簡単にいうと
+> レイヤー：画像を重ねて合成する方法。
 
-https://www.youtube.com/watch?v=jhTPI6QJQNg
+となります。もちろん、マスクしたり重ね方を乗算・スクリーンなど変えることができましたね。
 
-https://www.youtube.com/watch?v=gDXTMo31QSM
+### ノードベース
+ノード(節)を繋いで合成する方法でさまざまなソフトで利用されてきています。
+シェーダーエディタ・ジオメトリーノードでも利用されていましたね。
 
-https://www.youtube.com/watch?v=43RpGoA-KNU
+> ノード：ノードを繋ぎ合わせて合成する方法
 
-https://www.youtube.com/watch?v=JzODa47pdS8
+となります。レイヤーでは上下関係が明確にあり、複雑なことをするには異なるシーケンス・コンポジションを組み合わせる必要がありましたが、ノードでは線を繋ぐだけで自由に合成することが可能になります。
 
-https://www.youtube.com/watch?v=JzODa47pdS8
+合成だけでなく、カラーグレーディングやプログラミングなど様々な分野でノードベースが普及し始めています。
 
-https://www.youtube.com/watch?v=5HTI59gBW3s
+### レイヤーベースとノードベースの比較
+Fusionの例ですがみてみましょう。
+[レイヤーベースvsノードベース | Adobe After EffectsとFusionの違い、共通点からノードの概念を学ぶ l フュージョン入門](https://www.youtube.com/watch?v=zben_WO3O-w&t=90){target="_blank"}
 
-## 動画編集 何ができるか
-しょうかいだけでもいいか？
+## 画像ファイルについて
+合成する時には、一度Blenderからレンダリングする必要があります。
+劣化を避けるために、連番形式と呼ばれる静止画のファイル名に1フレームずつ書き出す方法がとられます。
+
+> ファイル名0000.jpg
+> ファイル名0001.jpg
+
+のような形式になります。
+
+### OpenEXR
+Blender内で作業を完結する時にも、他のソフトと連携する時にもOpenEXRというフォーマットについて知っておくことが重要です。
+
+特にOpenEXR MultiLayerフォーマットが重要となります。
+
+合成する時に必要な情報を分けて保存することができます。
+- 画像
+- アルファ
+- 深度
+- 影
+
+等分けることで後での合成が楽になります。
+
+レンダリングをし直さなくても、合成のタイミングで加減をコントロールできることもメリットです。
+
+Blender -> Photoshopの例をみてみましょう。
+[Exr-IO Blender Photoshop Compositing Tutorial](https://www.youtube.com/watch?v=43TRMeQZlzA&t=200s){target="_blank"}
+
+## BlenderでのOpenEXRを利用したコンポジット
+[Multilayer EXR sequences in Blender: Exporting and Compositing tip](https://www.youtube.com/watch?v=yO5xCOoAGqg&t=35s){target="_blank"}
+
+
+## Blenderのコンポジットでできること
+Cyclesを利用する人は、ノイズに悩まされることがあります。
+このステップは覚えておく必要があるでしょう。
+
+[Blender Tutorial: Compositing Techniques](https://www.youtube.com/watch?v=hprVvGtGqoY){target="_blank"}
+- Intro 0:00
+- Denoising 0:15
+- Color Grading 2:11
+- Lens dispersion 3:24
+- Light beams 4:26
+- Lens Dirt 5:27
+
+## 動画編集
+Premiere使えば良いので、積極的にBlenderで動画編集をする意味はないと思いますが、一応編集できるので紹介しておきます。
+
+- [モデリングをするブレンダーは動画編集もできるんだ。](https://www.youtube.com/watch?v=qBNNhek5Ls4){target="_blank"}
+- [Blender As A Video Editor? It's Actually Really Good!](https://www.youtube.com/watch?v=Qb5pge01H4Q){target="_blank"}
+
+
+## 参考リンク
+- [Make Your Renders Pop - Intro To The Compositor](https://www.youtube.com/watch?v=jhTPI6QJQNg){target="_blank"}
+- [Every Compositor Node in Blender 2.83 Explained in One Video](https://www.youtube.com/watch?v=gDXTMo31QSM){target="_blank"}
+- [How to Composite in Blender](https://www.youtube.com/watch?v=43RpGoA-KNU){target="_blank"}
+- [Blender 2.8 Eevee Tutorial - How to Combine Separate Scenes (Separate Lighting) - Combine Layers](https://www.youtube.com/watch?v=JzODa47pdS8){target="_blank"}
+- [https://www.youtube.com/watch?v=5HTI59gBW3s](https://www.youtube.com/watch?v=5HTI59gBW3s){target="_blank"}
+
 
 
 
