--- a/2022/MediaRepresentationV/mr5_15.md
+++ b/2022/MediaRepresentationV/mr5_15.md
@@ -5,22 +5,24 @@
 ---
 ## 目次
 
-- [メディア表現V 15. モーショントラッキング](#メディア表現v-15-モーショントラッキング)
-  - [目次](#目次)
-  - [原理](#原理)
-  - [やってみよう](#やってみよう)
-  - [参考](#参考)
-  - [まとめ](#まとめ)
+1. [メディア表現V 15. モーショントラッキング](#メディア表現v-15-モーショントラッキング)
+   1. [目次](#目次)
+   2. [原理](#原理)
+   3. [やってみよう](#やってみよう)
+   4. [参考](#参考)
+   5. [動画](#動画)
+   6. [まとめ](#まとめ)
 
 ---
 
 
 ## 原理
+口頭にて...
 
 ## やってみよう
 - VFXで新規書類
-- OPENで映像を開く
-- Sceneの設定を合わせるSetSceneFrame(尺)、fps・解像度はて入力
+- OPENで映像を開く(画面中央)
+- Sceneの設定を合わせるSetSceneFrame(尺)、fps・解像度は手入力
 - 再生して紫の線を確認
 - MotionModelをLoc,Rot,Sca
 - (Cameraのプリセット合わせた方がいいけど)
@@ -48,5 +50,18 @@
 ## 参考
 https://www.youtube.com/watch?v=V62Ow3SXE6c
 
+## 動画
+自分でとってきてもいいけど
+- [IMG_5011.MOV](./data/IMG_5011.MOV)
+- [IMG_5012.MOV](./data/IMG_5012.MOV)
+- [IMG_5013.MOV](./data/IMG_5013.MOV)
+- [IMG_5014.MOV](./data/IMG_5014.MOV)
+- [IMG_5016.MOV](./data/IMG_5016.MOV)
+- [IMG_5017.MOV](./data/IMG_5017.MOV)
+- [IMG_5019.MOV](./data/IMG_5019.MOV)
+- [IMG_5020.MOV](./data/IMG_5020.MOV)
+- [IMG_5021.MOV](./data/IMG_5021.MOV)
+- [IMG_5022.MOV](./data/IMG_5022.MOV)
+
 ## まとめ
-あああ
+
