--- a/2022/DigitalDesignII/dd2_01.md
+++ b/2022/DigitalDesignII/dd2_01.md
@@ -8,9 +8,87 @@
 1. [デジタルデザイン基礎演習 第2ターム 1. Illustrator復習](#デジタルデザイン基礎演習-第2ターム-1-illustrator復習)
    1. [目次](#目次)
    2. [スライド](#スライド)
+   3. [Illustrator 復習](#illustrator-復習)
+   4. [課題](#課題)
 
 ---
 
 ## スライド
 
 [スライド資料](./dd2_01slide.pdf){:target="_blank"}
+
+---
+## Illustrator 復習
+前期にやったIllustratorをおさらいしてみましょう
+
+### パス
+パスを慣れておくと、画像や動画作成時に役立ちます
+
+- [ベジエ曲線について](https://cultureacademia.jp/illustrator/108/){:target="_blank"}
+ポイントが書いてあります。
+
+- [ペンツールで描くベジェ曲線をマスターする](https://helpx.adobe.com/jp/illustrator/how-to/draw-edit-curves.html){:target="_blank"}
+Adobeの公式ページです。
+
+### トレース
+[![](https://img.youtube.com/vi/JLVa8owqV-M/0.jpg)](https://www.youtube.com/watch?v=JLVa8owqV-M){:target="_blank"}
+
+### レイアウトデザイン
+- [レイアウトとは？意味を分かりやすく解説](https://saruwakakun.com/design/tips/what-is-layout){:target="_blank"}
+
+### Adobe製品のワークスペースのリセット
+[![](https://img.youtube.com/vi/x8mrpKguFuM/0.jpg)](https://www.youtube.com/watch?v=x8mrpKguFuM){:target="_blank"}
+
+### 画面操作方法
+[![](https://img.youtube.com/vi/7GXcVhtkCH4/0.jpg)](https://www.youtube.com/watch?v=7GXcVhtkCH4){:target="_blank"}
+
+### オブジェクトの作成・操作・複製
+[![](https://img.youtube.com/vi/azVXmsoMMXM/0.jpg)](https://www.youtube.com/watch?v=azVXmsoMMXM){:target="_blank"}
+
+### レイヤー
+[![](https://img.youtube.com/vi/y3nWsnUe8uk/0.jpg)](https://www.youtube.com/watch?v=y3nWsnUe8uk){:target="_blank"}
+
+### クリッピングマスク
+[![](https://img.youtube.com/vi/loIbbhB4Ma8/0.jpg)](https://www.youtube.com/watch?v=loIbbhB4Ma8){:target="_blank"}
+
+### 整列
+[![](https://img.youtube.com/vi/fttFo0ApxGE/0.jpg)](https://www.youtube.com/watch?v=fttFo0ApxGE){:target="_blank"}
+
+### パスファインダー
+[![](https://img.youtube.com/vi/jttS-iYHoug/0.jpg)](https://www.youtube.com/watch?v=jttS-iYHoug){:target="_blank"}
+
+### 定規・ガイド
+[![](https://img.youtube.com/vi/idejcAk1Bgc/0.jpg)](https://www.youtube.com/watch?v=idejcAk1Bgc){:target="_blank"}
+
+### テキスト
+[![](https://img.youtube.com/vi/b348t6o2HtQ/0.jpg)](https://www.youtube.com/watch?v=b348t6o2HtQ){:target="_blank"}
+
+### トンボ(トリムマーク)
+注意：トンボの作り方は、現在印刷所の受け入れ状態によって2通りある模様です。
+- [Illustratorのトンボの最新の作り方と使い道のない残念なトンボ](https://design-trekker.jp/design/illustrator/trim-marks/){:target="_blank"}
+
+[![](https://img.youtube.com/vi/p9FPzHrkErI/0.jpg)](https://www.youtube.com/watch?v=p9FPzHrkErI){:target="_blank"}
+
+
+---
+## 課題
+1. A4 サイズに
+2. 「Illustrator Test」というタイトルを適当なフォント・サイズでアウトライン化して上部に配置せよ
+3. 同じ高さの正方形・円・六角形・星形を横に並べよ
+4. 150mm x 150mm の正方形の印刷物を作るために、トリムマークを作成し、塗り足しを適当な色で作成せよ
+5. 写真を適当に 9 枚選んで配置し、正方形の形にクリッピングマスクし、3 行 3 列でトリムマークの中に配置せよ
+6. 複数のオブジェクトから、パスファインダーを使って異なる図形を作成せよ
+7. ファイル名を**学籍番号+氏名.ai**として保存せよ
+8. **ファイル - 別名で保存 / ファイル形式をPDF / プリセットを最小ファイルサイズ**にして**学籍番号+氏名.pdf**を書き出せ
+9. **nas1-mc.thu.ac.jp**に接続して、**StudentVolume - 2022演習 - デジタルデザイン基礎演習II - 小林 - 
+
+### サンプル
+![](img/dd2_01_sample.png)
+
+#### サンプル作成動画
+なるべくみないで自分でやってみよう。
+[![](https://img.youtube.com/vi/Bov0a3ZuTaY/0.jpg)](https://www.youtube.com/watch?v=Bov0a3ZuTaY){:target="_blank"}
+
+
+
+
