--- a/2022/DigitalDesignII/dd2_01.md
+++ b/2022/DigitalDesignII/dd2_01.md
@@ -72,7 +72,7 @@ Adobeの公式ページです。
 
 ---
 ## 課題
-1. A4 サイズに
+1. A4 サイズの新規文書を作成
 2. 「Illustrator Test」というタイトルを適当なフォント・サイズでアウトライン化して上部に配置せよ
 3. 同じ高さの正方形・円・六角形・星形を横に並べよ
 4. 150mm x 150mm の正方形の印刷物を作るために、トリムマークを作成し、塗り足しを適当な色で作成せよ
@@ -80,7 +80,7 @@ Adobeの公式ページです。
 6. 複数のオブジェクトから、パスファインダーを使って異なる図形を作成せよ
 7. ファイル名を**学籍番号+氏名.ai**として保存せよ
 8. **ファイル - 別名で保存 / ファイル形式をPDF / プリセットを最小ファイルサイズ**にして**学籍番号+氏名.pdf**を書き出せ
-9. **nas1-mc.thu.ac.jp**に接続して、**StudentVolume - 2022演習 - デジタルデザイン基礎演習II - 小林 - 
+9. **nas1-mc.thu.ac.jp**に接続して、**StudentVolume - 2022演習 - デジタルデザイン基礎演習II**の中の該当するフォルダ内に**学生番号_名前**のフォルダを作成し、そこにPDFファイルを提出
 
 ### サンプル
 ![](img/dd2_01_sample.png)
