--- a/2022/MediaRepresentationVI/mr6_01.md
+++ b/2022/MediaRepresentationVI/mr6_01.md
@@ -242,7 +242,7 @@ AIは膨大な画像を解析した上で、入力した文章から画像を再
 
 を試してみたいと思います。
 
-ちょっと、開発者のコメントを見てみましょう。
+ちょっと、開発者のコメントを見てみましょう。(動画は14:57-18:50あたり)
 - [StableDiffusionを使った新しいAI作画サービスを作りました。日本語でOK。無料です](https://note.com/shi3zblog/n/n8a3c75574053)
 
 無料でサービスを提供してくれているわけですから、よく考えて日本語を(もちろん英語でもOK)を考えて、やってみましょう。
