--- a/2022/DigitalDesignII/dd2_03.md
+++ b/2022/DigitalDesignII/dd2_03.md
@@ -43,10 +43,10 @@
 ---
 ## 入れ子による表現
 ### 完成サンプル
-[![](https://img.youtube.com/vi/smW_GG4QiXg/0.jpg)](https://www.youtube.com/watch?v=smW_GG4QiXg)
+[![](https://img.youtube.com/vi/smW_GG4QiXg/0.jpg)](https://www.youtube.com/watch?v=smW_GG4QiXg){:target="_blank"}
 
 ### スクリーンキャスト
-[![](https://img.youtube.com/vi/WsQz4nXeZUc/0.jpg)](https://www.youtube.com/watch?v=WsQz4nXeZUc)
+[![](https://img.youtube.com/vi/WsQz4nXeZUc/0.jpg)](https://www.youtube.com/watch?v=WsQz4nXeZUc){:target="_blank"}
 
 ### コンポ1(上下運動)
 1. 新規コンポジション作成(HDTV 1920p 29.97) 10秒
@@ -135,7 +135,7 @@ AfterEffects2020以降、統合カメラツールがなくなってる(0:33)
 
 その代わり、カメラツールが3種類に別れています
 
-[Aeの統合カメラツールが無くなった？！](https://note.com/crecochan/n/n43ef673c74cd)
+[Aeの統合カメラツールが無くなった？！](https://note.com/crecochan/n/n43ef673c74cd){:target="_blank"}
 
 [![](https://img.youtube.com/vi/LDOwt8zbxVU/0.jpg)](https://www.youtube.com/watch?v=LDOwt8zbxVU){:target="_blank"}
 
