--- a/2022/DigitalDesignII/dd2_03.md
+++ b/2022/DigitalDesignII/dd2_03.md
@@ -144,6 +144,8 @@ AfterEffects2020以降、統合カメラツールがなくなってる(0:33)
 
 被写界深度をオンにしないとボケません
 
+![](img/dd2_03_camera.png)
+
 [![](https://img.youtube.com/vi/DGlPxVMOQxw/0.jpg)](https://www.youtube.com/watch?v=DGlPxVMOQxw){:target="_blank"}
 
 ### プリコンポーズから仕上げ
