--- a/2022/MediaRepresentationVI/mr6_02.md
+++ b/2022/MediaRepresentationVI/mr6_02.md
@@ -19,9 +19,9 @@
       - [移動系](#移動系)
       - [削除系](#削除系)
       - [Mac 標準ショートカット](#mac-標準ショートカット)
-  - [テキストエディタの種類](#テキストエディタの種類)
+  - [多種多様なテキストエディタ](#多種多様なテキストエディタ)
   - [VSCode特徴](#vscode特徴)
-    - [ショートカットチートシート](#ショートカットチートシート)
+    - [VSCショートカットチートシート](#vscショートカットチートシート)
     - [マルチカーソル](#マルチカーソル)
     - [検索と置換](#検索と置換)
       - [検索](#検索)
@@ -34,6 +34,7 @@
     - [4. 次の方法試したことありますか？](#4-次の方法試したことありますか)
     - [この文章プログラミング以外でも当てはまるかと](#この文章プログラミング以外でも当てはまるかと)
   - [まとめ](#まとめ)
+  - [おまけ](#おまけ)
 
 ---
 
@@ -44,7 +45,7 @@
 テキストエディタとそれに関連しそうなことについて学修していきます。
 
 ### https://memeplex.app/
-何人か投稿してくれましたが、真田の人もTeamsに投稿してくださいね。
+何人か投稿してくれましたが、まだの人もTeamsに投稿してくださいね。
 
 
 ---
@@ -65,7 +66,7 @@ IT業界に内定決まった4年生から、
 
 というわけで、みなさん試してみましょう。
 
-ちなみに、ちょこっとやった感じで、自分5.9です。e-typingだと、250-300に相当するんじゃないか...
+ちなみに、ちょこっとやった感じで、自分6.0です。e-typingだと、250-300に相当するんじゃないか...
 
 ### タイピング遅い人
 両手にタオルをかけて、キーボードを完全に見れない状態にして、位置を体に覚え込ませましょう。
@@ -89,6 +90,9 @@ IT業界に内定決まった4年生から、
 - vi(vim)
 
 のどちらが使いやすいかで、戦争みたいなことが起こってきました。
+
+ドラマにも取り上げられるほどです。
+- [Twitter シリコンバレーのこのシーンがありえん好き](https://twitter.com/Rafale28/status/995661383629918209){:target="_blank"}
 
 新しいテキストエディタが出てきても、操作系は大体この二つのどちらかを模倣・拡張しています。
 
@@ -118,7 +122,7 @@ macのほとんどのソフトではemacsキーバインドが有効ですので
 
 #### 削除系
 - Ctrl+h 一文字前を削除(?)
-- Ctrl+d 一文字後を削除(?)
+- Ctrl+d 一文字後を削除(delete)
 - Ctrl+k 行を削除(kill line)
 
 #### Mac 標準ショートカット
@@ -149,12 +153,12 @@ macのほとんどのソフトではemacsキーバインドが有効ですので
 ---
 ---
 
-## テキストエディタの種類
+## 多種多様なテキストエディタ
 テキストエディタは文字を入力するだけのアプリです。
 
 ですが、使い勝手を良くするために様々なものが開発されてきました。
 
-2022現在では、ほぼ**Visual Studio Code**が制覇したと言って良いでしょう。
+ですが、2022現在では、ほぼ**Visual Studio Code**が制覇したと言って良いでしょう。
 
 - [戦国時代だったテキストエディタ界をVisual Studio Codeが天下統一しつつある](https://gigazine.net/news/20210723-the-era-of-visual-studio-code/){:target="_blank"} 
 
@@ -179,7 +183,7 @@ macのほとんどのソフトではemacsキーバインドが有効ですので
 - デバック機能が標準装備
 
 ---
-### ショートカットチートシート
+### VSCショートカットチートシート
 - [macOS版 本家](https://code.visualstudio.com/shortcuts/keyboard-shortcuts-macos.pdf)
 - [windows版 本家](https://code.visualstudio.com/shortcuts/keyboard-shortcuts-windows.pdf)
 - [macOS版 日本語](https://qiita.com/kuu520/items/92b9f2bf0bfc1419708e)
@@ -225,7 +229,7 @@ macのほとんどのソフトではemacsキーバインドが有効ですので
 
 HTML,CSSを入力するの、コード補完があっても大変ではなかったですか？
 
-最低限のHTMLを入力するのは「!」だけで良い、と前期に教えた気がしますが、これも実はEmmetの機能でした。
+最低限のHTMLを入力するのは「!」だけで良い、と情報デザイン応用演習Iに教えた気がしますが、これも実はEmmetの機能でした。
 
 1. 適当なhtmlファイルを作成(test.htmlなど)
 2. 「!」を打ってリターン
@@ -297,7 +301,31 @@ https://kisopro.net/blog/programming/google-it/
 
 テキストエディタやショートカットを手名付けましょう。
 
+---
+---
+---
+## おまけ
+ビッグニュースが昨日飛び込んできました。
 
+- [アドビはFigmaを買収する意向を表明しました。共同クリエイティビティは新時代へ](https://blog.adobe.com/jp/publish/2022/09/16/cc-intent-to-acquire-figma){:target="_blank"}
+
+Webデザインツールである「XD」を開発するAdobeが、対抗ソフトである「Figma」を買収するということです。
+
+- [Google Trend xd, figma](https://trends.google.co.jp/trends/explore?date=today%205-y&geo=JP&q=xd,figma){:target="_blank"}
+
+比較すると、Figmaが圧倒的に共同編集がしやすいと感じるようです。
+- [https://nocodedb.world/archives/10036](https://nocodedb.world/archives/10036){:target="_blank"}
+
+Adobeはこれまでも多くの製品を買収してきました。
+- [https://100kado.net/adobe-40-years-history](https://100kado.net/adobe-40-years-history){:target="_blank"}
+
+買収した結果、サービスがどうなるかは少し時間が経たないとわかりませんが、現状ではこのような方向性が打ち出されています。
+
+- [AdobeのFigma買収について、Figma CEO @zoink の一連のスレッドの抜粋](https://twitter.com/ken_tbdz/status/1570390800642764801?s=20&t=oywv2EOWVvk69jQdRb2Apw){:target="_blank"}
+
+
+ツールは常に進化を遂げており、ビジネスの事情によって、ツールをずっと使い続けられるかもわかりません。
+時代の流れを感じながら、つかやすいツールを使っていきましょう。
 
 
 
