--- a/2022/MediaRepresentationVI/mr6_02.md
+++ b/2022/MediaRepresentationVI/mr6_02.md
@@ -35,6 +35,7 @@
     - [この文章プログラミング以外でも当てはまるかと](#この文章プログラミング以外でも当てはまるかと)
   - [まとめ](#まとめ)
   - [おまけ](#おまけ)
+  - [追記](#追記)
 
 ---
 
@@ -326,6 +327,9 @@ Adobeはこれまでも多くの製品を買収してきました。
 
 ツールは常に進化を遂げており、ビジネスの事情によって、ツールをずっと使い続けられるかもわかりません。
 時代の流れを感じながら、つかやすいツールを使っていきましょう。
+
+## 追記
+- [サルにもわかる正規表現](https://userweb.mnet.ne.jp/nakama/)
 
 
 
