--- a/2022/MediaRepresentationVI/mr6_02.md
+++ b/2022/MediaRepresentationVI/mr6_02.md
@@ -330,7 +330,7 @@ Adobeはこれまでも多くの製品を買収してきました。
 
 ## 追記
 - [サルにもわかる正規表現](https://userweb.mnet.ne.jp/nakama/)
-
+- [Macでキーの連続入力の速さを設定する](https://support.apple.com/ja-jp/guide/mac-help/mchl0311bdb4/mac)
 
 
 
