--- a/2022/DigitalDesignII/dd2_04.md
+++ b/2022/DigitalDesignII/dd2_04.md
@@ -20,6 +20,7 @@
     - [XDの紹介](#xdの紹介)
     - [スターターキット](#スターターキット)
     - [課題](#課題)
+    - [XDの注意事項](#xdの注意事項)
   - [提出](#提出)
 
 ---
@@ -84,6 +85,8 @@ Adobe Creative Cloudから**XD**をインストールしておきましょう。
 - 余裕のある人は質問を複数にしてもいいです。
 - 提出は、共有されたURLにしてください。
 
+### XDの注意事項
+- 「保存」とすると、CreativeCloud(ネット上)に保存する画面が出てきます。XDはチームで共有することが前提のアプリのため、こういう挙動になっているようです。「ローカルドキュメントとして保存」とすれば、通常通り、コンピュータに保存されます。
 
 ---
 ## 提出
