--- a/2022/DigitalDesignII/dd2_04.md
+++ b/2022/DigitalDesignII/dd2_04.md
@@ -87,7 +87,8 @@ Adobe Creative Cloudから**XD**をインストールしておきましょう。
 
 ### XDの注意事項
 - 「保存」とすると、CreativeCloud(ネット上)に保存する画面が出てきます。XDはチームで共有することが前提のアプリのため、こういう挙動になっているようです。「ローカルドキュメントとして保存」とすれば、通常通り、コンピュータに保存されます。
-
+- 共有されたURLは、ブラウザに表示後、URL部分の左のアイコンをデスクトップにドラッグ&ドロップすると「.weblock」というファイルができます。これを提出しましょう。
+- 
 ---
 ## 提出
 
