--- a/2022/DigitalDesignII/dd2_05.md
+++ b/2022/DigitalDesignII/dd2_05.md
@@ -36,8 +36,8 @@
 - StudentVolumeの**モーショングラフィックス過去作品**にも先輩の作品がありますし
 - 昨年までの参考リンクも貼っておきます。
   - [25 Creative Motion Graphics ( Logo Animation ) - Intro](https://www.youtube.com/watch?v=-2F8ZkJIMq8){:target="_blank"}
-  - [Best logo animations | Motion Design Inspiration](https://www.youtube.com/watch?v=nUnkUoBKEfE){:target="_blank"}
-  - [Most Creative Logo Animation Ever Made| Brilliant Ideas | Creativity at its Peak!!](https://www.youtube.com/watch?v=UXyxp5zxiVA){:target="_blank"}
+  - [Best logo animations - Motion Design Inspiration](https://www.youtube.com/watch?v=nUnkUoBKEfE){:target="_blank"}
+  - [Most Creative Logo Animation Ever Made - Brilliant Ideas - Creativity at its Peak!!](https://www.youtube.com/watch?v=UXyxp5zxiVA){:target="_blank"}
   - [MTVのジングルのカッコ良いモーショングラフィックス](http://happyword.net/mtv_motiongraphics/){:target="_blank"}
   - [Animated Logos of Famous Brands - Increase Your Logo Animation Experience](https://www.youtube.com/watch?v=Jm_NYFGS-mQ){:target="_blank"}
   - [26 Animated Logos to Inspire Your Own](https://blog.hubspot.com/marketing/animated-logos){:target="_blank"}
