--- a/2022/MediaRepresentationVI/mr6_05.md
+++ b/2022/MediaRepresentationVI/mr6_05.md
@@ -1,30 +1,194 @@
-# メディア表現 VI 4. 特別講師
+# メディア表現 VI 5. データベース
 
 [メディア表現 VI TOP に戻る](./index.md)
 
 ---
 
-## 目次
+## 目次<!-- omit in toc -->
 
-- [メディア表現 VI 4. 特別講師](#メディア表現-vi-4-特別講師)
-  - [目次](#目次)
-  - [本日の内容](#本日の内容)
+- [メディア表現 VI 5. データベース](#メディア表現-vi-5-データベース)
   - [データベースとは](#データベースとは)
+  - [Excel, Google Spreadsheet](#excel-google-spreadsheet)
+  - [リレーショナルデータベース](#リレーショナルデータベース)
+  - [正規化](#正規化)
+    - [第１正規化](#第１正規化)
+    - [第２正規化](#第２正規化)
+      - [購入履歴](#購入履歴)
+      - [ユーザデータ](#ユーザデータ)
+      - [商品データ](#商品データ)
+      - [購入履歴明細](#購入履歴明細)
+    - [第３正規化](#第３正規化)
+    - [正規化まとめ](#正規化まとめ)
+    - [正規化のメリット・デメリット](#正規化のメリットデメリット)
+      - [メリット](#メリット)
+      - [デメリット](#デメリット)
+    - [SQL文](#sql文)
+    - [Twitterのデータ構造について考えてみよう。](#twitterのデータ構造について考えてみよう)
   - [提出について](#提出について)
 
 ---
 
-## 本日の内容
+## 本日の内容<!-- omit in toc -->
 - 【第5回】従来のセルとは異なるモダンExcelについて学修する。
 
 としていましたが、今日は４回目の内容**データベース**を行います。
 
+---
 ## データベースとは
-- 定義
-- GoogleSpreadSheet
-- リレーショナルデータベース
-- 正規化(設計ツール)
-- SQL文
+コンピュータ上で集積・整理された情報のことで、
+- 登録
+- 編集
+- 閲覧
+- 検索(抽出)
+などをしやすくしたものになります。
+
+---
+## Excel, Google Spreadsheet
+表計算ソフトである Excel, Google Spreadsheetでも、一応データベースっぽく利用することはできます。
+
+しかし、複数ユーザからの操作に弱かったり、大容量のデータの取り扱いに不向きだったりします。
+
+業務として利用するには、データベース専用のアプリの利用が求められます。
+
+---
+## リレーショナルデータベース
+- データ構造を決めたものを**テーブル**
+- テーブルに記録されたデータを**レコード**
+
+と言います。複数の**テーブル**に関連性を持たせたデータベースを**リレーショナルデータベース**と呼びます。
+
+例えば、個人情報のテーブル
+
+| 個人ID | 氏名  | E-mail     | 
+| ------ | ----- | ---------- | 
+| 00001  | Aさん | a@test.com | 
+| 00002  | Bさん | b@test.com | 
+| 00003  | Cさん | c@test.com | 
+
+と、出席確認テーブル
+
+| 出席ID | 出席日     | 個人ID | 
+| ------ | ---------- | ------ | 
+| 000001 | 2022/10/14 | 00001  | 
+| 000002 | 2022/10/14 | 00003  | 
+| 000003 | 2022/10/15 | 00002  | 
+| 000004 | 2022/10/15 | 00003  | 
+
+の二つのテーブルがあった時に、個人IDで二つのテーブルが関連づけられていることが分かります。
+
+テーブルはレコードに対して一意(ユニークな・重複しない)のIDを振っておくことが多いです。
+
+---
+## 正規化
+リレーショナルデータベースには設計が必要となります。コンピュータが扱いやすいテーブルの構造を作る必要があります。
+
+例えば、次のような表があったとしましょう。
+
+|注文日|ユーザ名|発送先住所|商品名1|単価1|数量1|商品名2|単価2|数量2|商品名3|単価3|数量3|合計金額|
+|:----|:----|:----|:----|:----|:----|:----|:----|:----|:----|:----|:----|:----|
+|2022/10/14|A|住所A|商品A|100|1|商品B|80|2|商品C|50|6|560|
+|2022/10/14|B|住所B|商品B|80|5| | | | | | |400|
+|2022/10/15|C|住所C|商品B|80|1|商品C|50|5| | | |330|
+|2022/10/16|B|住所B|商品C|50|5| | | | | | |250|
+
+これは無駄が多いような気がしませんか？また、注文の中に商品欄が3つありますが、商品4個以上では対応できません。
+
+### 第１正規化
+まず、これを整理しましょう。商品の注文ごとにレコードを記録させます。
+
+|注文日|ユーザ名|発送先住所|商品名1|単価1|数量1|合計金額|
+|:----|:----|:----|:----|:----|:----|:----|
+|2022/10/14|A|住所A|商品A|100|1|560|
+|2022/10/14|A|住所A|商品B|80|2|560|
+|2022/10/14|A|住所A|商品C|50|6|560|
+|2022/10/14|B|住所B|商品B|80|5|400|
+|2022/10/15|C|住所C|商品B|80|1|330|
+|2022/10/15|C|住所C|商品C|50|5|330|
+|2022/10/16|B|住所B|商品C|50|5|250|
+
+これを**第１正規化**と呼びます。
+
+### 第２正規化
+住所・単価等が重複して表に現れていますね。これも整理しましょう。
+ユーザ名・商品名・注文ごとにIDを振って整理してみましょう。
+
+#### 購入履歴
+|注文ID|注文日|ユーザID|合計金額|
+|:----|:----|:----|:----|
+|OID00001|2022/10/14|UID00001|560|
+|OID00002|2022/10/15|UID00002|400|
+|OID00003|2022/10/15|UID00003|330|
+|OID00004|2022/10/16|UID00002|250|
+
+#### ユーザデータ
+|ユーザID|ユーザ名|発送先住所|
+|:----|:----|:----|
+|UID00001|A|住所A|
+|UID00002|B|住所B|
+|UID00003|C|住所C|
+
+#### 商品データ
+|商品ID|商品名|単価|
+|:----|:----|:----|
+|GID00001|商品A|100|
+|GID00002|商品B|80|
+|GID00003|商品C|50|
+
+
+#### 購入履歴明細
+|注文ID|商品ID|数量|
+|:----|:----|:----|
+|OID00001|GID00001|1|
+|OID00001|GID00002|2|
+|OID00001|GID00003|6|
+|OID00002|GID00002|5|
+|OID00003|GID00002|1|
+|OID00003|GID00003|5|
+|OID00004|GID00003|5|
+
+### 第３正規化
+この例では、ここまでで分離できるところを全てしました。
+
+例えば、住所のところを「東京都」「神奈川県」「千葉県」などの都道府県ごとに管理すると、さらに分離することができます。
+
+### 正規化まとめ
+定義としては第５正規化まであるようですが、通常実務で必要とされているのは第３正規化までとなります。
+
+[参考：リレーショナルデータベース正規形の種類と正規化手順](https://proengineer.internous.co.jp/content/columnfeature/6480)
+
+### 正規化のメリット・デメリット
+#### メリット
+- データの汎用性アップ
+- データの容量削減
+- データの保守性アップ
+
+#### デメリット
+- 検索のパフォーマンスが低下する可能性
+
+---
+### SQL文
+データベースにデータを蓄えるための準備としての設計について学んできましたが、
+そのデータベースに対して**CRUD**
+- Create: データ作成
+- Read: データ取得
+- Update: データ更新
+- Delete: データ削除
+
+することが基本的には必要となります。そのためのデータベース言語があり、その中で最も普及しているものが**SQL**です。
+
+SQLはISO（国際標準化機構）で規格が標準化されており、一度学習すればほかのデータベースでもほぼ同じように操作可能です。
+
+ここでは**CRUD**という概念と、SQLという言語があるということを理解しておきましょう。
+
+---
+### Twitterのデータ構造について考えてみよう。
+TODO:
+ノーコードでやりたくなるようなネタで構造考えさせた方が...
+
+
+
+
+
 - ノーコードで試してみよう(AirTable)
   - https://www.youtube.com/watch?v=Jdspf-Y5adE
   - https://www.youtube.com/watch?v=Zrfs7uWMZiQ
